--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    background-color: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+}
