implementing album page

--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,4 +1,3 @@
-
 <section class="p-3">
     <div class="container-fluid">
         <div class="row">
@@ -26,7 +25,7 @@
                                     <div class="card-body bg-secondary text-white text-center">
                                     <img src={{album.cover_medium}} alt="">
                                     <h6 class=" card-title mb-2">{{album.title}}</h6>
-                                    <a routerLink="/artist/{{album.id}}" class="btn btn-outline-white">View Album</a>
+                                    <a routerLink="/albums/{{album.id}}" class="btn btn-outline-white">View Album</a>
 
                                     </div>
                                 </div>
