--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -1,2 +1,37 @@
-<p>album works!</p>
-<h1>{{albumId}}</h1>
+<section class="p-3">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <div class="row align-items-center">
+                            <div class="col-md-2">
+                                <img src="{{album.cover}}" alt="" class="src">
+                            </div>
+                            <div class="col-md-10">
+                                <h5 class="display-4">{{album.title}}</h5>
+                                <p class="display-5">Release Date: {{album.release_date | date}}</p>
+                                <p class="display-5">Number of tracks: {{album.nb_tracks}}</p>
+                                <button class="btn btn-outline-white btn-sm">back</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4" *ngFor="let track of album.tracks.data">
+                                <div class="card">
+                                    <div class="card-body bg-secondary text-white text-center">
+                                        <p class="lead">{{track.title}}</p>
+                                        <audio controls>
+                                            <source src="{{track.preview}}"> <source>
+                                        </audio>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
