--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf= "enabled">
+
 <section class="p-4">
     <div class="container">
         <div class="row">
@@ -40,7 +40,7 @@
                             <div class="cold-md-9">
                                 <h4 class="display-3 text-primary"></h4>
                                 <p class="h5">Artiste : 
-                                    <a  class="badge badge-succes mr-2" routerLink="artist"  (click)="onClick(index)">{{artist.artist.name}}</a>
+                                    <a  class="badge badge-succes mr-2" routerLink="/artists/{{artist.artist.id}}">{{artist.artist.name}}</a>
                 
                                     
                                 </p>
@@ -63,5 +63,5 @@
         </div>
     </div>
 </section>
-</div>
+
 <router-outlet></router-outlet>
