--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -2,18 +2,17 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <div class="card ">
-                    <div class="card-header bg-primary text-white">
+                <div class="card grad">
+                    <div class="card-header grad text-white">
                         <div class="row">
                             <div class="col-md-3">
-                                <img src= {{artist.picture_medium}} >
+                                <img class="img " src={{artist.picture_medium}}>
                             </div>
-                            <div class="col-md-9">
-                                <h3 class="display-3 ">
+                            <div class="col-md-9 ">
+                                <h3 class="display-3">
                                     {{artist.name}}
                                 </h3>
                                 <p class="h3">Followers : {{artist.nb_fan}}</p>
-                                
                             </div>
                         </div>
                     </div>
@@ -21,11 +20,12 @@
                     <div class="card-body ">
                         <div class="row">
                             <div class="col-md-4" *ngFor="let album of albums">
-                                <div class="card mt-3">
-                                    <div class="card-body bg-secondary text-white text-center">
-                                    <img src={{album.cover_medium}} alt="">
-                                    <h6 class=" card-title mb-2">{{album.title}}</h6>
-                                    <a routerLink="/albums/{{album.id}}" class="btn btn-outline-white">View Album</a>
+                                <div class="card mt-3 img_alb">
+                                    <div class="card-body grad text-white text-center">
+                                        <img class="img_alb" src={{album.cover_medium}} alt="">
+                                        <h6 class=" card-title mb-2">{{album.title}}</h6>
+                                        <a routerLink="/albums/{{album.id}}"
+                                            class="btn btn-outline-white text-white">View Album</a>
 
                                     </div>
                                 </div>
