--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
-<div class="f"><p>footer works!</p></div>
+<footer class="deg text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3 text-white">
+    © 2022 Master M1 MIAGE Panthéon Sorbonne
+
+  </div>
+  <!-- Copyright -->
+</footer>
