--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
-*{
-    background-color: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+.grad{
+    background: #232526;
+    background-image: url(assets/music.jpg);
 }
+
